TESTING javadoc highlighting